--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewsAlert - Break Stories First with Real-time Emergency Intelligence</title>
+    <title>NewsPulse - Break Stories First with Real-time Emergency Intelligence</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <style>
@@ -83,7 +83,7 @@
     <div class="min-h-screen bg-slate-50">
         <!-- Breaking News Banner -->
         <div class="bg-red-600 text-white py-2 px-4 text-center text-sm font-medium breaking-news">
-            🚨 BREAKING: NewsAlert helped Channel 7 break the Times Square incident story 12 minutes before competitors
+            🚨 BREAKING: NewsPulse helped Channel 7 break the Times Square incident story 12 minutes before competitors
         </div>
 
         <!-- Header -->
@@ -93,7 +93,7 @@
                     <div class="w-8 h-8 bg-red-600 rounded-lg flex items-center justify-center">
                         <i data-lucide="newspaper" class="w-5 h-5 text-white"></i>
                     </div>
-                    <span class="text-xl font-bold text-gray-900">NewsAlert</span>
+                    <span class="text-xl font-bold text-gray-900">NewsPulse</span>
                     <div class="hidden sm:flex items-center ml-4">
                         <div class="w-2 h-2 bg-red-500 rounded-full live-indicator"></div>
                         <span class="text-xs text-red-600 font-medium ml-1">LIVE</span>
@@ -136,13 +136,12 @@
                     <i data-lucide="zap" class="w-4 h-4 mr-2"></i>
                     Be First to the Story
                 </div>
-                <h1 class="text-5xl md:text-6xl font-bold mb-6 leading-tight">
-                    Break News Stories
-                    <span class="text-red-400"> Minutes Before</span>
-                    <br />Your Competition
-                </h1>
+                <h1 class="text-3xl sm:text-4xl md:text-6xl font-bold mb-6 leading-tight">
+                    Break News Stories <span class="text-red-400 whitespace-nowrap">Minutes&nbsp;Before</span><br>
+                    Your Competition
+                  </h1>
                 <p class="text-xl text-gray-300 mb-8 leading-relaxed">
-                    NewsAlert monitors live NYPD and FDNY radio feeds 24/7, instantly alerting your newsroom to breaking incidents. 
+                    NewsPulse monitors live radio feeds 24/7, instantly alerting your newsroom to breaking incidents. 
                     Get precise locations, incident details, and severity scores to dispatch crews faster than ever before.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center mb-12">
@@ -252,7 +251,7 @@
                     </div>
                     <div>
                         <div class="text-4xl font-bold text-red-600 mb-2">50+</div>
-                        <div class="text-gray-600">Newsrooms already using NewsAlert</div>
+                        <div class="text-gray-600">Newsrooms already using NewsPulse</div>
                     </div>
                 </div>
             </div>
@@ -264,7 +263,7 @@
                 <div class="text-center mb-16">
                     <h2 class="text-4xl font-bold text-gray-900 mb-4">Everything Your Newsroom Needs to Break Stories First</h2>
                     <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-                        From live radio monitoring to intelligent story scoring, NewsAlert gives your team the competitive edge in breaking news coverage.
+                        From live radio monitoring to intelligent story scoring, NewsPulse gives your team the competitive edge in breaking news coverage.
                     </p>
                 </div>
 
@@ -273,7 +272,7 @@
                         <i data-lucide="radio" class="w-10 h-10 text-red-600 mb-4"></i>
                         <h3 class="text-xl font-semibold text-gray-900 mb-2">Live Radio Monitoring</h3>
                         <p class="text-gray-600">
-                            24/7 monitoring of NYPD and FDNY radio frequencies with instant transcription and analysis
+                            24/7 monitoring of radio frequencies with instant transcription and analysis
                         </p>
                     </div>
 
@@ -326,7 +325,7 @@
                 <div class="text-center mb-16">
                     <h2 class="text-4xl font-bold text-gray-900 mb-4">Trusted by Leading Newsrooms</h2>
                     <p class="text-xl text-gray-600">
-                        From local stations to major networks, news organizations rely on NewsAlert for breaking news coverage
+                        From local stations to major networks, news organizations rely on NewsPulse for breaking news coverage
                     </p>
                 </div>
 
@@ -369,7 +368,7 @@
                             <h3 class="text-2xl font-bold">Success Story</h3>
                         </div>
                         <blockquote class="text-lg mb-6 italic">
-                            "NewsAlert helped us break the Brooklyn warehouse fire story 15 minutes before our competitors. Our crew was already on scene conducting interviews while others were still getting the initial reports."
+                            "NewsPulse helped us break the Brooklyn warehouse fire story 15 minutes before our competitors. Our crew was already on scene conducting interviews while others were still getting the initial reports."
                         </blockquote>
                         <div class="flex items-center">
                             <div class="w-12 h-12 bg-red-600 rounded-full flex items-center justify-center mr-4">
@@ -385,13 +384,13 @@
             </div>
         </section>
 
-        <!-- API Section -->
+        API Section
         <section id="api" class="py-20 bg-gray-50">
             <div class="container mx-auto px-4">
                 <div class="text-center mb-16">
                     <h2 class="text-4xl font-bold text-gray-900 mb-4">Integrate with Your Newsroom Systems</h2>
                     <p class="text-xl text-gray-600">
-                        Seamlessly connect NewsAlert with your existing newsroom management systems and workflows
+                        Seamlessly connect NewsPulse with your existing newsroom management systems and workflows
                     </p>
                 </div>
 
@@ -601,7 +600,7 @@
             <div class="container mx-auto px-4 text-center">
                 <h2 class="text-4xl font-bold mb-4">Ready to Break News First?</h2>
                 <p class="text-xl text-red-100 mb-8 max-w-2xl mx-auto">
-                    Join the newsrooms already using NewsAlert to stay ahead of breaking stories and beat the competition to every scene.
+                    Join the newsrooms already using NewsPulse to stay ahead of breaking stories and beat the competition to every scene.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <button class="px-8 py-4 bg-white text-red-600 hover:bg-gray-100 rounded-lg text-lg font-semibold transition-colors flex items-center justify-center">
@@ -625,7 +624,7 @@
                             <div class="w-8 h-8 bg-red-600 rounded-lg flex items-center justify-center">
                                 <i data-lucide="newspaper" class="w-5 h-5 text-white"></i>
                             </div>
-                            <span class="text-xl font-bold">NewsAlert</span>
+                            <span class="text-xl font-bold">NewsPulse</span>
                         </div>
                         <p class="text-gray-400">Breaking news intelligence for modern newsrooms</p>
                     </div>
@@ -658,7 +657,7 @@
                     </div>
                 </div>
                 <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                    <p>&copy; 2024 NewsAlert. All rights reserved. Breaking news intelligence for modern newsrooms.</p>
+                    <p>&copy; 2024 NewsPulse. All rights reserved. Breaking news intelligence for modern newsrooms.</p>
                 </div>
             </div>
         </footer>
