--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -103,7 +103,7 @@
                     <a href="#features" class="text-gray-600 hover:text-gray-900 transition-colors">Features</a>
                     <a href="#newsrooms" class="text-gray-600 hover:text-gray-900 transition-colors">Newsrooms</a>
                     <a href="#pricing" class="text-gray-600 hover:text-gray-900 transition-colors">Pricing</a>
-                    <a href="#api" class="text-gray-600 hover:text-gray-900 transition-colors">API</a>
+                    <!-- <a href="#api" class="text-gray-600 hover:text-gray-900 transition-colors">API</a> -->
                     <button class="px-4 py-2 border border-gray-300 rounded-md bg-white text-gray-900 hover:bg-gray-50 transition-colors">
                         Newsroom Login
                     </button>
@@ -122,7 +122,7 @@
                     <a href="#features" class="block py-2 text-gray-600">Features</a>
                     <a href="#newsrooms" class="block py-2 text-gray-600">Newsrooms</a>
                     <a href="#pricing" class="block py-2 text-gray-600">Pricing</a>
-                    <a href="#api" class="block py-2 text-gray-600">API</a>
+                    <!-- <a href="#api" class="block py-2 text-gray-600">API</a> -->
                     <button class="w-full text-left py-2 text-gray-600">Newsroom Login</button>
                     <button class="w-full bg-red-600 text-white py-2 rounded-md mt-2">Start Breaking News</button>
                 </div>
